@@ -1,1 +1,2 @@
-
+Julien Syx <julien.syx@gmail.com>
+Seraf <nephilim.seraphin@gmail.com>
