@@ -12,15 +12,15 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 
-from lisa_api import db, app, core
+from lisa_api import db, app
 from flask.ext.security import Security, SQLAlchemyUserDatastore, \
     UserMixin, RoleMixin
 from lisa_api.forms.login_form import ExtendedLoginForm
 
 # Define models
 roles_users = db.Table('roles_users',
-        db.Column('user_id', db.Integer(), db.ForeignKey('user.id')),
-        db.Column('role_id', db.Integer(), db.ForeignKey('role.id')))
+                       db.Column('user_id', db.Integer(), db.ForeignKey('user.id')),
+                       db.Column('role_id', db.Integer(), db.ForeignKey('role.id')))
 
 
 class Role(db.Model, RoleMixin):
@@ -51,4 +51,3 @@ user_datastore = SQLAlchemyUserDatastore(db=db, user_model=User,
                                          role_model=Role)
 security = Security(app=app, datastore=user_datastore,
                     login_form=ExtendedLoginForm)
-
