@@ -1,10 +1,7 @@
 Flask
 flask-restplus
 Flask-SQLAlchemy
-pbr
 stevedore
-tox
-virtualenv
 flask-security
-MySQL-python
+mysqlclient
 click
