@@ -56,6 +56,7 @@ norecursedirs =
     build
     south_migrations
     migrations
+    .eggs
 python_files =
     test_*.py
     *_test.py
@@ -79,9 +80,7 @@ forced_separate=test_lisa_api
 
 [matrix]
 python_versions =
-    2.6
     2.7
-    3.3
     3.4
     pypy
 
