@@ -1,0 +1,4 @@
+tox
+pbr
+virtualenv
+sphinx
