@@ -1,5 +1,19 @@
-from lisa_api.__main__ import main
+from lisa_api import app, db
+from flask import current_app
+import unittest
 
 
-def test_main():
-    assert main([]) == 0
+class LisaApiTestCase(unittest.TestCase):
+    """Main test cases for LISA-API."""
+
+    def setUp(self):
+        """Pre-test activities."""
+        app.testing = True
+        with app.app_context():
+            db.init_app(current_app)
+            self.app = app.test_client()
+
+    def test_get_login_test(self):
+        """Does hitting the /login endpoint return the proper HTTP code?"""
+        response = self.app.get('/login')
+        assert response.status_code == 200
