@@ -2,16 +2,8 @@
 envlist =
     clean,
     check,
-    2.6,
-    2.6-nocover,
     2.7,
-    2.7-nocover,
-    3.3,
-    3.3-nocover,
     3.4,
-    3.4-nocover,
-    pypy,
-    pypy-nocover,
     report,
     docs
 
@@ -22,8 +14,9 @@ setenv =
 deps =
     pytest
     pytest-capturelog
+
 commands =
-    {posargs:py.test -vv --ignore=src}
+    {posargs:py.test -vv --ignore=lisa_api}
 
 [testenv:spell]
 setenv =
@@ -65,7 +58,7 @@ usedevelop = true
 commands =
     python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
-    flake8 src
+    flake8 lisa_api
 
 [testenv:coveralls]
 deps =
@@ -89,21 +82,6 @@ commands = coverage erase
 usedevelop = true
 deps = coverage
 
-[testenv:2.6]
-basepython = python2.6
-setenv =
-    {[testenv]setenv}
-    WITH_COVERAGE=yes
-usedevelop = true
-commands =
-    {posargs:py.test --cov=src --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-#[testenv:2.6-nocover]
-#basepython = python2.6
-
 [testenv:2.7]
 basepython = python2.7
 setenv =
@@ -111,55 +89,19 @@ setenv =
     WITH_COVERAGE=yes
 usedevelop = true
 commands =
-    {posargs:py.test --cov=src --cov-report=term-missing -vv}
+    {posargs:py.test --cov=lisa_api --cov-report=term-missing -vv}
 deps =
     {[testenv]deps}
     pytest-cov
 
-[testenv:2.7-nocover]
-basepython = python2.7
-
-#[testenv:3.3]
-#basepython = python3.3
-#setenv =
-#    {[testenv]setenv}
-#    WITH_COVERAGE=yes
-#usedevelop = true
-#commands =
-#    {posargs:py.test --cov=src --cov-report=term-missing -vv}
-#deps =
-#    {[testenv]deps}
-#    pytest-cov
-
-#[testenv:3.3-nocover]
-#basepython = python3.3
-
-#[testenv:3.4]
-#basepython = python3.4
-#setenv =
-#    {[testenv]setenv}
-#    WITH_COVERAGE=yes
-#usedevelop = true
-#commands =
-#    {posargs:py.test --cov=src --cov-report=term-missing -vv}
-#deps =
-#    {[testenv]deps}
-#    pytest-cov
-
-#[testenv:3.4-nocover]
-#basepython = python3.4
-
-#[testenv:pypy]
-#basepython = pypy
-#setenv =
-#    {[testenv]setenv}
-#    WITH_COVERAGE=yes
-#usedevelop = true
-#commands =
-#    {posargs:py.test --cov=src --cov-report=term-missing -vv}
-#deps =
-#    {[testenv]deps}
-#    pytest-cov
-#
-#[testenv:pypy-nocover]
-#basepython = pypy
+[testenv:3.4]
+basepython = python3.4
+setenv =
+    {[testenv]setenv}
+    WITH_COVERAGE=yes
+usedevelop = true
+commands =
+    {posargs:py.test --cov=lisa_api --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
